Fix: viewport height size hidden by url bar

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .wrapper {
-  height: 93vh;
+  height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-direction: column;
 }
